--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,8 @@
 .App {
   text-align: center;
-  max-width: 85%;
+  max-width: 95%;
   margin-right: auto;
   margin-left: auto;
-}
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
 
 /* searchBAr.js */
@@ -75,7 +56,7 @@
 
 #formLogin label{
   font-family: 'Playfair Display', serif;
-  font-weight: 400; 
+  font-weight: 400;
 }
 
 /* q1_destination */
@@ -101,4 +82,38 @@
   height: 100%;
   background-color: #E3F0FF;
   float: right;
+}
+
+.placeholderImg{
+  position: relative;
+  width: 100%;
+  height: 70vh;
+  background-color: #526c6d;
+  display: block;
+}
+
+.placeDesc{
+  padding: 1% 2%;
+  height: auto;
+  background-color: #E3F0FF;
+  position: absolute;
+  bottom: 10%;
+  letter-spacing: 2px;
+}
+
+.placeDesc h3{
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  margin: 0;
+  font-size: 2.8em;
+  margin-bottom: 2%;
+}
+
+.placeDesc h4{
+  font-family: 'Hind Madurai', sans-serif;
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: .5%;
+  font-weight: 400;
+  font-size: 1.6em;
 }
