--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,16 @@
     justify-content: space-between;
     border-bottom: 1px solid black;
   }
+  .grommetux-anchor--reverse .grommetux-control-icon{
+    margin-left: 0;
+  }
   .grommetux-anchor__icon {
     height: auto;
   }
   /* login.js */
   .login{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
   }
   .grommetux-form-field {
     width: 90%;
@@ -43,7 +47,6 @@
     font-size: 3.3em;
     letter-spacing: 3px;
     font-family: 'Cardo', serif;
-
     font-weight: 400;
   }
   .passInput{
@@ -51,9 +54,152 @@
   }
   #loginButt{
     width: 90%;
-    color: black;
-    font-family: 'Roboto', sans-serif;
+    border: none;
+    margin-top: 3%;
+    margin-bottom: 5%;
+  }
+  .create {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+  }
+
+  /* quizzes */
+  .QandA{
+    margin-top: 30%;
+  }
+  .question{
+    /* font-family: 'Poppins', sans-serif;
+    font-weight: 300; */
+    font-family: 'Cardo', serif;
     font-weight: 400;
+    font-size: 1.8em;
+  }
+
+  .submit{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    letter-spacing: 3px;
+    margin-top: 5%;
+    border-radius: 8px;
+    width: 90%;
+    font-size: 1.3em;
+    padding: 2%;
+    background-color: #4153AF;
+    color: white;
+  }
+
+  #PlacesAutocomplete__root{
+    margin-top: 15%;
+  }
+
+  #my-input-id{
+    width: 100%;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+  }
+  .choices {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    margin-top: 17%;
+  }
+
+  .choices span{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    width: 19%;
+    padding: 1%;
+    border: 1px solid black;
+    font-size: 1.1em;
+  }
+
+  #choices2 span{
+    justify-content: space-around;
+    width: 45%;
+  }
+  #choices3 span{
+    justify-content: space-around;
+    width: 40%;
+  }
+  .top2{
+    margin-bottom: 3%;
+  }
+
+  .bottom2{
+    margin-bottom: 0%;
+  }
+
+  .next{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+  }
+  #q3choices{
+    margin-top: 13%;
+    margin-bottom: 4%;
+  }
+  #choices2{
+    margin-top: 13%;
+    margin-bottom: 4%;
+  }
+  #choices3{
+    margin-top: 13%;
+    margin-bottom: 4%;
+  }
+  #q6choices {
+    margin-top: 13%;
+    margin-bottom: 4%;
+  }
+  #q6choices span{
+    justify-content: space-around;
+    width: 45%;
+  }
+
+  /* searchbar */
+  .location_icon {
+    margin-right: 8px;
+  }
+  .fa.fa-map-marker {
+    color: #e53935;
+  }
+  .search_form {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5rem;
+    width: 90%;
+  }
+
+  .autocomplete-container {
+    border-bottom: honeydew;
+    border-left: honeydew;
+    border-right: honeydew;
+    border-top: 1px solid #e6e6e6;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    border-radius: 0 0 2px 2px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+  }
+
+  .render_item {
+    padding: 4px;
+    text-align: left;
+  }
+
+  .search_input,
+  .search_input:focus,
+  .search_input:active {
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+    border: honeydew;
+    display: block;
+    width: 100%;
+    padding: 16px;
+    font-size: 16px;
+    border-radius: 2px;
+    outline: none;
   }
 
   /* results.js */
@@ -124,47 +270,7 @@
 
 }
 /* searchBAr.js */
-.location_icon {
-  margin-right: 8px;
-}
 
-.fa.fa-map-marker {
-  color: #e53935;
-}
-.search_form {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5rem;
-    width: 50%;
-}
-
-.autocomplete-container {
-  border-bottom: honeydew;
-  border-left: honeydew;
-  border-right: honeydew;
-  border-top: 1px solid #e6e6e6;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  border-radius: 0 0 2px 2px;
-}
-
-.render_item {
-  padding: 4px;
-  text-align: left;
-}
-
-.search_input,
-.search_input:focus,
-.search_input:active {
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-  border: honeydew;
-  display: block;
-  width: 100%;
-  padding: 16px;
-  font-size: 16px;
-  border-radius: 2px;
-  outline: none;
-}
 /* login.js */
 /* .box2 {
   width: 60%;
@@ -178,7 +284,7 @@
 } */
 
 /* q1_destination */
-.QandA {
+/* .QandA {
   margin-top: 8%;
 }
 .question {
@@ -193,7 +299,7 @@
   margin-top: 3%;
   border-radius: 25px;
   padding: 1% 3%;
-}
+} */
 /* results.js */
 /* .right-half {
   width: 50%;
