--- a/src/App.css
+++ b/src/App.css
@@ -371,6 +371,7 @@
     max-width: 95%;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
   }
   .itinTitle {
     font-family: 'Poppins', sans-serif;
@@ -388,6 +389,14 @@
     flex-wrap: nowrap;
     justify-content: flex-end;
     margin-top: 3%;
+  }
+  .itineraryBox{
+    position: relative;
+  }
+  .itinEditButt {
+    position: absolute;
+    top: 0;
+    right: 0;
   }
   .timeOfDay{
     font-family: 'Poppins', sans-serif;
@@ -434,7 +443,6 @@
   .titleKey{
     color: #4153AF;
   }
-
   /* viewall.js */
   .tableTitle{
     margin-top: 5%;
@@ -511,6 +519,23 @@
   }
   .review {
     border-bottom: 1px solid black;
+  }
+  /* trashButton */
+  .trashDiv {
+    display: inline-block;
+    position: absolute;
+    bottom: -.5%;
+    left: 0px;
+    right: 0px;
+    margin-left: -5%;
+    margin-right: -5%;
+  }
+  .trashButt {
+    margin-top: 15%;
+    padding: 2%;
+    background-color: #4153AF;
+    width: 100%;
+    height: 55px;
   }
 
 }
