--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   max-width: 95%;
   margin-right: auto;
   margin-left: auto;
+  height: 100vh;
+  position: relative;
 }
 @media (min-width: 320px) and (max-width: 430px) {
   /* header.js */
@@ -371,7 +373,8 @@
     max-width: 95%;
     margin-left: auto;
     margin-right: auto;
-    position: relative;
+    height: 100%;
+    padding-bottom: 18%;
   }
   .itinTitle {
     font-family: 'Poppins', sans-serif;
@@ -390,9 +393,7 @@
     justify-content: flex-end;
     margin-top: 3%;
   }
-  .itineraryBox{
-    position: relative;
-  }
+
   .itinEditButt {
     position: absolute;
     top: 0;
@@ -522,20 +523,18 @@
   }
   /* trashButton */
   .trashDiv {
-    display: inline-block;
+    display: block;
     position: absolute;
-    bottom: -.5%;
+    bottom: 0px;
     left: 0px;
     right: 0px;
     margin-left: -5%;
     margin-right: -5%;
   }
   .trashButt {
-    margin-top: 15%;
     padding: 2%;
     background-color: #4153AF;
     width: 100%;
     height: 55px;
   }
-
 }
